<package format="2">
  <name>apsrc_waypoint_replanner</name>
  <version>1.0.1</version>
  <description>Waypoint Replanner</description>
  <author email="mbahramg@mtu.edu">Mojtaba Bahramgiri</author>
  <maintainer email="mbahramg@mtu.edu">Mojtaba Bahramgiri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_msgs</depend>
  <depend>apsrc_msgs</depend>
  <depend>network_interface</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
